<resources>
    <string name="app_name">BooksApp</string>
    <string name="title_activity_privacy">Privacy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Books Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_contact">Contact</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Books Store</string>
    <string name="hello_android">Hello Android!</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="title_activity_show_accounts">ShowAccounts</string>
    <string name="title_activity_user_view">userView</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="sign_in_as_admin">Sign in as Admin</string>
    <string name="to_continue_booksapp">to continue BooksApp</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_inppp">Sign in</string>
    <string name="create_account">Create accountt</string>
    <string name="todo">TODO</string>
</resources>
