<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fitsSystemWindows="true"
    tools:context=".Activities.UserLogin">

    <Button
        android:visibility="gone"
        android:id="@+id/phoneverify"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/sign_in_as_admin"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/link"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo2"
            android:tint="@android:color/white" />

        <TextView
            android:id="@+id/hey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/to_continue_booksapp"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/Signins"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button1"
            android:gravity="center"
            android:text="@string/sign_inppp"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp"
            android:background="@drawable/button1"
            android:gravity="center"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>

    </RelativeLayout>

    <include layout="@layout/bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>